force-app/main/default/objects/TW1_QAQC_Item__c/TW1_QAQC_Item__c.object-meta.xml
<CustomObject>
    <label>QAQC Item</label>
    <nameField>
        <label>QAQC Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAQC Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>