force-app/main/default/objects/TW1_QAQC_Item__c/fields/TW1_Family_of_Materials__c.field-meta.xml
<CustomField>
    <fullName>TW1_Family_of_Materials__c</fullName>
    <label>Family of Materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>