force-app/main/default/objects/TW1_QAQC_Item__c/fields/TW1_Main_Deviation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Main_Deviation__c</fullName>
    <label>Main Deviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>