force-app/main/default/objects/TW1_QAQC_Item__c/fields/TW1_QA_QC_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW1_QA_QC_Inspection__c</fullName>
    <label>QA/QC Inspection</label>
    <referenceTo>TW1_Interaction__c</referenceTo>
    <relationshipLabel>QAQC Items</relationshipLabel>
    <relationshipName>QAQC_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>